--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
         font-family: 'Graphik';
         src: url(Graphik-Font-Family/GraphikMedium.otf);
@@ -65,15 +64,17 @@ button img{
 
 /*-----------------------NÃO MEXER EM HIPOTESE ALGUMA---------------------------------------*/
 .opInvestimentos{
-display: none;
+display: block;
 position: absolute;
 left: 0;
 background-color: #ffffff;
 width: 100vw;
+height: 0px;
 margin: 1.5em 0;
 position: absolute;
 justify-content: space-around;
-height: 53vh;
+height: 0vh;
+transition: linear 0.5s;
 }
 .dropdown{
     padding: 1.5em 0;
@@ -87,10 +88,18 @@ height: 53vh;
 .dropdown:hover .opInvestimentos{
     display: flex;
     margin: 1.5em 0;
+    height: 54vh;
+    transition: linear 0.5s;
 }
 .dropdown:hover .opNavbar{
     border-bottom: 13px solid white;
 }
+
+.dropdown:hover .colunaInv{
+    transition: linear 0.5s;
+    font-size: 1em;
+}
+
 #up{
     display:none;
 }
@@ -123,6 +132,7 @@ height: 53vh;
 }
 .colunaInv{
     display: flex;
+    font-size: 0.3px;
     flex-direction: column;
     justify-content: flex-start;
     margin: 2em 0;
@@ -183,12 +193,11 @@ height: 53vh;
     display: flex;
     margin-right: 2em;
     margin-left: 1.5em;
-    width: 4.5vw;
+    width: 55%;
     justify-content: space-between;
 }
 
 
-/*------------------NÃO MEXER ALÉM DAQUI---------------------------*/
 header{
     display: flex;
     flex-direction: column;
@@ -223,10 +232,61 @@ header{
 }
 
 .headerposition a{
-    margin-top: 3em;
+    margin-top: 1.5em;
     font-size: 1.2em;
     color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
+
+/*----------------------Ancoragem-------------------*/
+
+.linha{
+    margin-top: 2em;
+    display: flex;
+}
+.textImg{
+    display: flex;
+    align-items: center;
+}
+
+.linha a{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 1.2em;
+    color: #7A25C9;
+}
+
+.linha a hr{
+    border: none;
+    width: 0px;
+    height:2px;
+    transition: linear 0.3s;
+    color:#7625c9;
+    border-radius: 5px;
+}
+
+.linha a:hover hr{
+    transition: linear 0.3s;
+    display: block;
+    width:100%;
+    background: #4c0677;
+}
+
+
+#Nuinvest a, #InvestNews a{
+    color: #ffffff;
+}
+
+#Nuinvest hr,#Opoder hr, #InvestNews hr{
+    background-color: #ffffff;
+}
+
+
+
+
 /*------------------NÃO MEXER DAQUI PRA CIMA--------------------------------*/
 section{
     width: 100vw;
@@ -281,25 +341,24 @@ section{
     color: #7A25C9;
     font-weight: 500;
 }
-
-.text a{
-    color:#7625c9;
-    font-size: 1.2em;
-    margin-top: 1.5em;
-}
 /*-------------------- Sections---------------------*/
 
 #Opoder{
     background-size: 100%;
     background-image: url(imagens/poder.jpeg);
 }
-#Opoder .text h1, #Opoder .text a{
+#Opoder .text h1{
+    color: #ffffff;
+}
+
+#Opoder .text a{
     color: #ffffff;
 }
 
 #Ultravioleta{
     background-color: #F4F4F4;
 }
+
 
 #Carteiras .arrumarA{
     height: 75%;
@@ -323,7 +382,7 @@ section{
 #InvestNews{
     background: #451372;
 }
-#InvestNews .text h1,#InvestNews .text a{
+#InvestNews .text h1{
     color: #ffffff;
     margin: 0.6em 0;
     font-weight: 100;
@@ -410,8 +469,28 @@ section{
     background: #7725c918;
 }
 
-.setas button:active{
+.txta{
+    width:108px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
 
+.txta hr{
+    width: 0px;
+    height: 3px;
+    border: none;
+    transition: linear 0.3s;
+}
+
+.txta:hover hr{
+    transition: linear 0.3s;
+    width: 100%;
+    height: 2px;
+    border:none;
+    border-radius: 5px;
+    background-color: #451372;
 }
 
 /*--- TENTANTO FAZER FUNCIONAR ---*/
@@ -427,3 +506,5 @@ section{
 #news{
     height: 9%;
 }
+
+
