--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ button img{
     align-items: center;
     justify-content: space-between;
     font-size: 1.2em;
-    gap: 1vw;
+    gap: 1em;
 }
 
 .opNavbar a{
@@ -57,9 +57,9 @@ button img{
     background-image: url(imagens/LogoNuInvest.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 88%;
-    width: 9em;
-    height: 3em;
+    background-size: 100%;
+    width: 180px;
+    height: 45px;
 }
 
 /*-----------------------NÃO MEXER EM HIPOTESE ALGUMA---------------------------------------*/
@@ -88,7 +88,7 @@ transition: linear 0.5s;
 .dropdown:hover .opInvestimentos{
     display: flex;
     margin: 1.5em 0;
-    height: 54vh;
+    height: 500px;
     transition: linear 0.5s;
 }
 .dropdown:hover .opNavbar{
@@ -132,7 +132,7 @@ transition: linear 0.5s;
 }
 .colunaInv{
     display: flex;
-    font-size: 0.3px;
+    font-size: 0px;
     flex-direction: column;
     justify-content: flex-start;
     margin: 2em 0;
@@ -396,7 +396,7 @@ section{
 #Mil .arrumar{
     display: flex;
     flex-direction: column;
-    height: 60vh;
+    height: 60%;
 }
 
 #Mil .text{
@@ -405,22 +405,24 @@ section{
 
 .carrossel{
     width: 100%;
-    height:60%;
+    height: 235px;
     overflow-x: scroll;
     overflow: hidden;
     margin-bottom: 2em;
     display: flex;
+    align-items: center;
 }
 
 
 .roleta{
     display: flex;
-    width: 200%;
+    width: 600%;
+    height: 100%;
 }
 .opRoleta{
     border: 1px solid rgba(0, 0, 0, 0.205);
-    width: 22vw;
-    height: 26vh;
+    width: 365px;
+    height: 100%;
     margin-right: 1.5em;
     display: flex;
     flex-direction: column;
@@ -467,6 +469,11 @@ section{
 }
 .setas button:hover{
     background: #7725c918;
+}
+
+.aTextImg{
+    display: flex;
+    align-items: center;
 }
 
 .txta{
