--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 @font-face {
         font-family: 'Graphik';
-        src: url(Graphik-Font-Family/GraphikMedium.otf);
+        src: url(Graphik-Font-Family/GraphikLight.otf);
+}
+@font-face {
+    font-family: 'GraphikMedium';
+    src: url(Graphik-Font-Family/GraphikMedium.otf);
+}
+@font-face {
+    font-family: 'GraphikRegular';
+    src: url(Graphik-Font-Family/GraphikRegular.otf);
 }
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: "Graphik", sans-serif;
     list-style: none;
 }
 body{
     overflow-x: hidden; 
 }
-
+/*-------------------------------------------------------------------------------------*/
+/*-----------------             BARRA DE NAVEGAÇÃO               ----------------------*/
+/*-------------------------------------------------------------------------------------*/
 a{
     display: flex;
     align-items: center;
@@ -26,43 +35,41 @@ button img{
     width: 1.1em;
     color: white;
 }
-
 .navBar{
     background: white;
     position: fixed;
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     align-items: center;
     justify-content: space-between;
     box-shadow: 1px 1px 1px rgba(163, 162, 162, 0.445);
+    font-family: 'GraphikMedium';
     font-size: 1em;
 }
-
 .opNavbar{
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 1.2em;
     gap: 1em;
 }
-
 .opNavbar a{
     color:#000000;
 }
-
-
 #logo{
     margin: 0 2.5em;
-    background-image: url(imagens/LogoNuInvest.svg);
+    background-image: url(imagens/Nuinvest.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: 150px;
     width: 180px;
     height: 45px;
 }
-
-/*-----------------------NÃO MEXER EM HIPOTESE ALGUMA---------------------------------------*/
+/*-------------------------------------------------------------------------------------*/
+/*------------            OPÇÕES DE INVESTIMENTOS                 ---------------------*/
+/*-------------------------------------------------------------------------------------*/
 .opInvestimentos{
 display: block;
 position: absolute;
@@ -70,36 +77,31 @@ left: 0;
 background-color: #ffffff;
 width: 100vw;
 height: 0px;
-margin: 1.5em 0;
+margin: 29px 0;
 position: absolute;
 justify-content: space-around;
-height: 0vh;
+height: 0;
 transition: linear 0.5s;
 }
 .dropdown{
     padding: 1.5em 0;
 }
-
 .dropdown img{
     height: 0.6em;
-    margin-left: 0.2em;
+    margin-left: 12px;
 }
-
 .dropdown:hover .opInvestimentos{
-    display: flex;
-    margin: 1.5em 0;
+    display: flex;;
     height: 500px;
     transition: linear 0.5s;
 }
 .dropdown:hover .opNavbar{
     border-bottom: 13px solid white;
 }
-
 .dropdown:hover .colunaInv{
     transition: linear 0.5s;
     font-size: 1em;
 }
-
 #up{
     display:none;
 }
@@ -137,21 +139,18 @@ transition: linear 0.5s;
     justify-content: flex-start;
     margin: 2em 0;
 }
-
 .Ftrader ul{
     height: 100%;
     display: flex;
     justify-content: space-between;
 }
-/*---------------------^^^^^^^^^^^^^^^^^^^^^------------------------*/
-
-/*-----------------------REGISTRO E LOGIIN--------------------------*/
+/*-------------------------------------------------------------------------------------*/
+/*--------------------           REGISTRO E LOGIIN           --------------------------*/
+/*-------------------------------------------------------------------------------------*/
 .reglog{
     height: 100%;
     display: flex;
-    justify-content: flex-end;
 }
-
 .reglog button{
     display: flex;
     align-items: center;
@@ -159,8 +158,8 @@ transition: linear 0.5s;
     background: none;
     border: none;
     font-size: 1.1rem;
+    font-family: 'GraphikMedium';
 }
-
 .reglog button:nth-child(1){
     padding: 0 1em;
     color: #7625c9;
@@ -171,24 +170,19 @@ transition: linear 0.5s;
     justify-content: space-around;
     width: 100%;
 }
-
 .reglog button:nth-child(1):hover{
     background-color: #7a25c91e;
 }
-
 .reglog button:nth-child(2){
-    margin-right: 10px;
     background: #7625c9;
     color: #ffffff;
     width: 140px;
     display: flex;
     justify-content: space-around;
 }
-
 .reglog button:nth-child(2):hover{
     background-color: #4c0677;
 }
-
 .reglog button:nth-child(2) div{
     display: flex;
     margin-right: 2em;
@@ -196,18 +190,131 @@ transition: linear 0.5s;
     width: 55%;
     justify-content: space-between;
 }
+/*-------------------------------------------------------------------------------------*/
+/*--------------------           Menu para responsividade            ------------------*/
+/*-------------------------------------------------------------------------------------*/
+#menu{
+    display: none;
+    margin-right: 15px;
+    height: 55px;
+    width: 55px;
+    border: none;
+    border-radius: 50%;
+    background-image: url(imagens/menu_purple_24dp.svg);
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 75%;
+    background-color: transparent;
+    cursor: pointer;
+}
+.menulist{
+    display: none;
+    position: fixed;
+    margin-top: 80px;
+    background-color: white;
+    width: 100vw;
+    align-items: stretch;
+    justify-content: flex-start;
+    overflow-y: auto;
+}
+.localList{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.localList li{
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    font-size: 1.6em;
+    border-bottom: 1px solid lightgray;
+}
+.localList li:last-child{
+    border:none;
+}
+.localList li:last-child  a{
+    cursor: default;
+}
+.menulist img{
+    fill: #000000;
+    height: 30px;
+    margin-left: 10px;
+}
+.menulist span img{
+    height: 15px;
+}
 
-
+.menulist li a{
+    padding:3vh;
+    width: 100%;
+    font-family: 'GraphikRegular';
+    font-weight: 800;
+    color: #000000;
+}
+.dropmenu{
+    display: flex;
+    flex-direction: column;
+}
+.dropmenu button{
+    padding: 1.1em;
+    display: flex;
+    width: 100%;
+    text-align: start;
+    font-weight: 800;
+    font-size: 1em;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+#dropInvest{
+    display: none;
+    margin-left: 2.6em;
+}
+.listInvest{
+    display: block;
+    margin-bottom: 1.3em;
+}
+.listInvest ul{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.listInvest h3{
+    margin-bottom: 1.2em;
+    font-family: 'Graphik';
+    font-weight: 400;
+    font-size: 0.7em;
+}
+.listInvest li{
+    display:flex;
+    border: none;
+    margin-bottom: 0.2em;
+}
+.listInvest li a{
+    margin: 0;
+    padding:  0;
+    font-size: 0.6em;
+    border: none;
+    font-weight: 800;
+}
+/*-------------------------------------------------------------------------------------*/
+/*------------------       PRIMEIRA SEÇÃO DA PÁGINA              ----------------------*/
+/*-------------------------------------------------------------------------------------*/
 header{
     display: flex;
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-image: url(https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    background-size: 100%;
+    background-color: rebeccapurple;
+    /*background-image: url(https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-size: 500%;
     background-repeat: no-repeat;
+    */
     justify-content: center;
     align-items: flex-end;
+    font-family: 'GraphikMedium';
 }
 .headerposition{
     display: flex;
@@ -217,20 +324,18 @@ header{
     margin-right: 3em;
     justify-content: center;
 }
-
 .headerposition h1{
     color: #ffffff;
     font-size: 4.4em;
     font-weight: 500;
     margin-bottom: 0.6em;
 }
-
 .headerposition h2{
+    font-family: 'GraphikRegular';
     color:#ffffff;
     font-size: 1.8em;
-    font-weight: 200;
+    font-weight: 100;
 }
-
 .headerposition a{
     margin-top: 1.5em;
     font-size: 1.2em;
@@ -239,9 +344,9 @@ header{
     flex-direction: column;
     align-items: flex-start;
 }
-
-/*----------------------Ancoragem-------------------*/
-
+/*-------------------------------------------------------------------------------------*/
+/*---------         Ancoragem e Transição da Linha Inferior         -------------------*/
+/*-------------------------------------------------------------------------------------*/
 .linha{
     margin-top: 2em;
     display: flex;
@@ -250,7 +355,6 @@ header{
     display: flex;
     align-items: center;
 }
-
 .linha a{
     display: flex;
     flex-direction: column;
@@ -258,7 +362,6 @@ header{
     font-size: 1.2em;
     color: #7A25C9;
 }
-
 .linha a hr{
     border: none;
     width: 0px;
@@ -267,35 +370,29 @@ header{
     color:#7625c9;
     border-radius: 5px;
 }
-
 .linha a:hover hr{
     transition: linear 0.3s;
     display: block;
     width:100%;
     background: #4c0677;
 }
-
-
 #Nuinvest a, #InvestNews a{
     color: #ffffff;
 }
-
 #Nuinvest hr,#Opoder hr, #InvestNews hr{
     background-color: #ffffff;
 }
-
-
-
-
-/*------------------NÃO MEXER DAQUI PRA CIMA--------------------------------*/
+/*-------------------------------------------------------------------------------------*/
+/*---------------------           SEÇÕES DA PÁGINA           --------------------------*/
+/*-------------------------------------------------------------------------------------*/
 section{
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'GraphikMedium';
 }
-
 .arrumar{
     display: flex;
     width: 78vw;
@@ -303,7 +400,6 @@ section{
     align-items: center;
     justify-content: space-between;
 }
-
 .arrumarA{
     display: flex;
     width: 70vw;
@@ -311,11 +407,9 @@ section{
     align-items: center;
     justify-content: flex-end;
 }
-
 .arrumar img, .arrumarA img{
     height: 83%;
 }
-
 .text{
     display: flex;
     flex-direction: column;
@@ -323,31 +417,32 @@ section{
     width: 60%;
     height: 50%;
 }
-
 .text h1{
     font-size: 3.2em;
     color: #000000;
     line-height: 1.2em;
-    font-weight: 400;
-    
+    font-weight: 400;   
 }
-
 .text h2{
     margin: 1.5em 0 0.5em 0;
     font-weight: 100;
 }
-
 .text b{
     color: #7A25C9;
     font-weight: 500;
 }
-/*-------------------- Sections---------------------*/
-
 #Opoder{
+
+    background-color: rebeccapurple;
+    /*
+    background-repeat: no-repeat;
     background-size: 100%;
     background-image: url(imagens/poder.jpeg);
+    */
 }
 #Opoder .text h1{
+    font-size: 2.8em;
+    font-weight: 100;
     color: #ffffff;
 }
 
@@ -387,8 +482,9 @@ section{
     margin: 0.6em 0;
     font-weight: 100;
 }
-
-/*----------------------Mil Opçoes-----------------------*/
+/*-------------------------------------------------------------------------------------*/
+/*----------------------               Mil Opçoes               -----------------------*/
+/*-------------------------------------------------------------------------------------*/
 #Mil{
     flex-direction: column;
     width: 100vw;
@@ -398,11 +494,9 @@ section{
     flex-direction: column;
     height: 60%;
 }
-
 #Mil .text{
     width: 100%;
 }
-
 .carrossel{
     width: 100%;
     height: 235px;
@@ -412,8 +506,6 @@ section{
     display: flex;
     align-items: center;
 }
-
-
 .roleta{
     display: flex;
     width: 600%;
@@ -429,7 +521,6 @@ section{
     justify-content: space-between;
     padding: 1.2em 0 1.2em 1.2em;
 }
-
 .opRoleta h1{
     font-size: 1.7em;
     font-weight: 100;
@@ -444,38 +535,30 @@ section{
 .opRoleta a{
     color: #7A25C9;
 }
-
-
 .setas{
     background: none;
     width: 8em;
     display: flex;
     justify-content: space-between;
 }
-
-
 .setas button img{
     width: 1.3em;
     height: 1.3em;
 }
-
 .setas button{
     background: none;;
     border: none;
     padding: 1.2em;
     border-radius: 50%;
     cursor: pointer;
-
 }
 .setas button:hover{
     background: #7725c918;
 }
-
 .aTextImg{
     display: flex;
     align-items: center;
 }
-
 .txta{
     width:108px;
     display: flex;
@@ -483,14 +566,12 @@ section{
     justify-content: flex-start;
     align-items: flex-start;
 }
-
 .txta hr{
     width: 0px;
     height: 3px;
     border: none;
     transition: linear 0.3s;
 }
-
 .txta:hover hr{
     transition: linear 0.3s;
     width: 100%;
@@ -499,19 +580,38 @@ section{
     border-radius: 5px;
     background-color: #451372;
 }
-
-/*--- TENTANTO FAZER FUNCIONAR ---*/
-/* AJUSTE DE IMAGEM*/
+/*-------------------------------------------------------------------------------------*/
+/*------------------------     AJUSTE DE IMAGEM     -----------------------------------*/ 
+/*-------------------------------------------------------------------------------------*/
 #cell{
-    height: 85%;
-    margin-right: 10em;
-}
-#notebook{
-    margin-left: 1.2em;
-    height:50%;
+    margin-right:5em;
+    height: 100%;
 }
 #news{
-    height: 9%;
+    height: 10%;
+    margin-right: 1.5em;
 }
-
-
+#notebook{
+    height: 50%;
+}
+.arrumar .imgsection, .arrumarA .imgsection{
+    height: 30vw;
+}
+/*-------------------------------------------------------------------------------------*/
+/*----------------------------     RESPONSIVIDADE          ----------------------------*/
+/*-------------------------------------------------------------------------------------*/
+@media (max-width: 1410px) {
+    #logo{
+        background-size: 120px;
+        margin-left: 0.5em;
+    }
+   #menu{
+        display: block;
+    }
+    .opNavbar li, .reglog{
+        display: none;
+    }
+    .text{
+        font-size: 1em;
+    }
+}
