--- a/style.css
+++ b/style.css
@@ -585,10 +585,9 @@ section{
 /*-------------------------------------------------------------------------------------*/
 #cell{
     margin-right:5em;
-    height: 100%;
 }
 #news{
-    height: 10%;
+    height: 4.3vw;
     margin-right: 1.5em;
 }
 #notebook{
@@ -613,5 +612,92 @@ section{
     }
     .text{
         font-size: 1em;
+    }
+}
+
+@media (max-width: 980px) {
+
+    body{
+        width: 10vw;
+    }
+    
+    .navBar{
+        width: 100vw;
+        height: 10vh;
+    }
+
+    .menulist{
+        margin-top: 10vh;
+    }
+    
+    header{
+        width: 100vw;
+        font-size: 0.6em;
+    }
+    
+    section{
+        font-size: 0.6em;
+    }
+
+    .headerposition h1{
+        font-size: 3.5em;
+    }
+
+    .arrumar{
+        flex-direction: column;
+    }
+    .arrumarA{
+        flex-direction: column-reverse;
+    }
+    
+    .arrumar, .arrumarA{
+        font-size: 0.8em;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .text h1{
+        width: 80vw;
+    }
+    .text h2{
+        width: 80vw;
+        font-size: 2.2em;
+    }
+    .text a{
+        font-size: 2em;
+    }
+
+    #Opoder a{
+        font-size: 1.6em;
+    }
+
+
+   #Zero img, #Ultravioleta img, #Carteiras img{
+        height: 45%;
+    }
+
+    #Mil{
+        width: 100vw;
+    }
+
+    #Mil b, #Mil h1{
+        font-size: 2em;
+    }
+
+    .carrossel{
+        height: 35%;
+    }
+
+
+    .carrossel h1{
+        font-size: 2em;
+    }
+
+    #notebook{
+        margin-top: 20px;
+        height: 35%;
+    }
+    #news{
+        height: 7%;
     }
 }
